After modifying the auth 6 testing

--- a/requirements.txt
+++ b/requirements.txt
@@ -17,3 +17,4 @@ unstructured[pdf]
 
 # Paywall (install from GitHub, NOT PyPI)
 st-paywall@git+https://github.com/tylerjrichards/st-paywall.git
+# force rebuild
